# thrust_vector_control

./: CMakeLists.txt  LICENSE  README.md  build_thrust_vector_control.sh  run_thrust_vector_controller.sh  toolchain_arm.cmake
.github/workflows/: ctest_on_push.yml  python_on_push.yml
logs/: flight_test.csv  flight_test3.csv  flight_test5.csv  test.csv  test_pwm_controller_1000hz_cpu1123.csv  test_pwm_controller_1000hz_cpu3323.csv
logs/large_ccw/3/: test.csv  test1.csv  test_higher_tune.csv  test_higher_tune2.csv  test_kp18_kd12.csv  test_kp18_kd12_v100.csv  test_kp18_kd12_v90.csv  test_normal_tune.csv  test_normal_tune_slow.csv
logs/large_ccw/inverted/: frames_test.csv
logs/large_ccw/inverted/force_logs/: frames_test.csv  test_buffering.csv  test_buffering_2.csv  test_buffering_3.csv
logs/large_rotor/normal/force_logs/: test_1.csv
logs/largeccw_torqueff/force_logs/: test2.csv  test4.csv  test5.csv
logs/pwm_data/: pwm_controller_test.csv  pwm_data.csv  pwm_test2.csv  pwm_test_with_mavlinkrouter.csv  test_pwm_chrt_10us.csv  test_pwm_chrt_1us.csv  test_pwm_chrt_1us_device0.csv  test_pwm_controller_1000hz_cpu1213.csv  test_pwm_controller_1000hz_cpu1233.csv  test_pwm_controller_1000hz_cpu3323.csv
logs/small_rotor/inverted/force_logs/: test_1.csv
logs/small_rotor/normal/: test_2.csv
logs/small_rotor/normal/force_logs/: test_1.csv  test_2.csv
scripts/: analyze_thrust_vectoring.py  compare_rotor_sim_real.py  fit_and_plot_combined_datasets.py  generate_command_data.py  plot.py  plot_both_azimuth.py  plot_motor_data.py  plot_pwm.py  plot_single_dataset.py  plot_single_torqueff_dataset.py
scripts/tests/: test_analyze_thrust_vectoring.py
src/: main.cpp  main_calibration.cpp  main_testrate.cpp  main_thrust_vector_controller.cpp
src/controller/: calibration_controller.cpp  calibration_controller.h  controller.h  pwm_input_controller.cpp  pwm_input_controller.h  thrust_vector_controller.cpp  thrust_vector_controller.h  thrust_vector_sequence_generator.cpp  thrust_vector_sequence_generator.h
src/hardware_tests/: CMakeLists.txt  main_pwm_test.cpp
src/motor_control/: moteus_motor_control.cpp  moteus_motor_control.h  moteus_protocol.h  pi3hat_moteus_interface.h
src/pi3hat/: pi3hat.cpp
src/pwm/: pwm_reader.cpp  pwm_reader.h
src/tests/: CMakeLists.txt  thrust_vector_sequence_generator_test.cpp
src/thrust_vector_controller/: thrust_vector_controller.cpp  thrust_vector_controller.h
